--- a/src/app/shared/styles/button.scss
+++ b/src/app/shared/styles/button.scss
@@ -11,13 +11,25 @@
 }
 
 .btn-primary {
-    background-color: $color-primary;
+    background: $color-primary 0% 0% no-repeat padding-box;
     border: none;
     letter-spacing: 0px;
+    color: #fff;
+    font-weight: 500;
 }
 
 .btn-primary:hover {
+    background-color: $color-hover-primary;
+    border: none;
+    font-weight: 500;
+}   
 
+.btn-outline-primary {
+    border: 2px solid $color-primary;
+    border-radius: 23px;
+    letter-spacing: 0px;
+    color: $color-primary;
+    font-weight: 500;
 }
 
 .btn-secondary {
