--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
-  <div class="flex w-full max-w-6xl">
+  <div class="flex w-full" style="max-width: 112rem;">
     <!-- Form Container -->
     <div class="bg-white p-8 rounded shadow-md w-1/2">
       <div class="w-1/6 mb-4">
-        <h1 class="text-2xl font-bold text-gray-800 mb-4 text-center">IMaTalk</h1>
+        <h1 class="text-3xl font-bold text-gray-800 mb-4 text-center">IMaTalk</h1>
       </div>
 
       <h1 class="fs-18 font-bold mb-2">Welcome to Our Application</h1>
