--- a/src/app/modules/auth/components/register/register.component.scss
+++ b/src/app/modules/auth/components/register/register.component.scss
@@ -1,12 +1,15 @@
-.register-container {
-  max-height: 70%;
-  min-height: 70%;
+.register {
+  &__container {
+    max-height: 70%;
+    min-height: 70%;
 
-  .register-avatar {
+  }
+
+  &__avatar {
     width: 200px;
     height: 200px;
 
-    .register-change-avatar {
+    &__change-avatar {
       right: 20px;
       bottom: 40px
     }
